@@ -2,9 +2,9 @@ package com.pse.tixclick.service;
 
 import com.pse.tixclick.exception.AppException;
 import com.pse.tixclick.exception.ErrorCode;
-import com.pse.tixclick.payload.entity.Account;
-import com.pse.tixclick.payload.entity.Role;
+import com.pse.tixclick.payload.entity.*;
 import com.pse.tixclick.payload.entity.company.Company;
+import com.pse.tixclick.payload.entity.company.Contract;
 import com.pse.tixclick.payload.entity.company.Member;
 import com.pse.tixclick.payload.entity.entity_enum.EEventStatus;
 import com.pse.tixclick.payload.entity.entity_enum.ERole;
@@ -27,7 +27,6 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContext;
 import org.springframework.security.core.context.SecurityContextHolder;
 
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
@@ -64,9 +63,11 @@ public class EventActivityServiceTest {
     @Mock
     private MemberRepository memberRepository;
 
+    @Mock
+    private ContractRepository contractRepository;
+
     @BeforeEach
     void setUp() {
-        // Mock SecurityContext và Authentication
         Authentication authentication = mock(Authentication.class);
         SecurityContext context = mock(SecurityContext.class);
 
@@ -76,208 +77,260 @@ public class EventActivityServiceTest {
         SecurityContextHolder.setContext(context);
     }
 
+    @Test
+    void shouldThrowExceptionWhenRequestListIsNull() {
+        assertThrows(IllegalArgumentException.class, () -> eventActivityService.createEventActivityAndTicket(null, "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowExceptionWhenRequestListIsEmpty() {
+        assertThrows(IllegalArgumentException.class, () -> eventActivityService.createEventActivityAndTicket(new ArrayList<>(), "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowWhenAccountNotFound() {
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.empty());
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowWhenEventNotFound() {
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(new Account()));
+        when(eventRepository.findById(1)).thenReturn(Optional.empty());
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowWhenMemberNotOwnerOrAdminInDraftEvent() {
+        Account account = new Account();
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
+
+        Event event = new Event();
+        event.setStatus(EEventStatus.DRAFT);
+        Company company = new Company();
+        company.setCompanyId(10);
+        event.setCompany(company);
+
+        Member member = new Member();
+        member.setSubRole(ESubRole.EMPLOYEE);
+
+        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
+        when(memberRepository.findMemberByAccount_UserNameAndCompany_CompanyId("testUser", 10))
+                .thenReturn(Optional.of(member));
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowWhenContractCodeNullInScheduledEvent() {
+        Account account = new Account();
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
+
+        Event event = new Event();
+        event.setStatus(EEventStatus.SCHEDULED);
+
+        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), null));
+    }
+
+    @Test
+    void shouldThrowWhenContractNotFoundInScheduledEvent() {
+        Account account = new Account();
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
+
+        Event event = new Event();
+        event.setStatus(EEventStatus.SCHEDULED);
+
+        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
+        when(contractRepository.findByContractCode("CONTRACT1")).thenReturn(null);
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowWhenAccountIsNotManagerInScheduledEvent() {
+        Account account = new Account();
+        account.setAccountId(1);
+        Role role = new Role();
+        role.setRoleName(ERole.BUYER);
+        account.setRole(role);
+
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
+
+        Event event = new Event();
+        event.setStatus(EEventStatus.SCHEDULED);
+
+        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
+
+        Contract contract = new Contract();
+        Account contractOwner = new Account();
+        contractOwner.setAccountId(1);
+        contract.setAccount(contractOwner);
+
+        when(contractRepository.findByContractCode("CONTRACT1")).thenReturn(contract);
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1"));
+    }
+
+    @Test
+    void shouldThrowWhenEventStatusInvalid() {
+        Account account = new Account();
+        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
+
+        Event event = new Event();
+        event.setStatus(EEventStatus.APPROVED);
+
+        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
+
+        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
+        req.setEventId(1);
+
+        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1"));
+    }
+
 //    @Test
-//    void shouldThrowExceptionWhenRequestListIsNull() {
-//        assertThrows(IllegalArgumentException.class, () -> eventActivityService.createEventActivityAndTicket(null));
-//    }
-//    @Test
-//    void shouldThrowExceptionWhenRequestListIsEmpty() {
-//        assertThrows(IllegalArgumentException.class, () -> eventActivityService.createEventActivityAndTicket(new ArrayList<>()));
-//    }
+//    void shouldCreateNewEventActivityAndTicketsSuccessfully() {
+//        // Setup Account
+//        Account account = new Account();
+//        account.setAccountId(1);
+//        Role role = new Role();
+//        role.setRoleName(ERole.MANAGER);
+//        account.setRole(role);
 //
-//    @Test
-//    void shouldThrowWhenAccountNotFound() {
-//        when(accountRepository.findAccountByUserName("testUser"))
-//                .thenReturn(Optional.empty());
-//
-//        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
-//        req.setEventId(1);
-//
-//        List<CreateEventActivityAndTicketRequest> list = List.of(req);
-//
-//        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(list));
-//    }
-//
-//    @Test
-//    void shouldThrowWhenEventNotFound() {
-//        Account account = new Account(); // khởi tạo tài khoản
-//        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
-//        when(eventRepository.findById(1)).thenReturn(Optional.empty());
-//
-//        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
-//        req.setEventId(1);
-//        List<CreateEventActivityAndTicketRequest> list = List.of(req);
-//
-//        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(list));
-//    }
-//
-//    @Test
-//    void shouldThrowWhenNotOwnerOrAdminInDraftEvent() {
-//        Account account = new Account(); // account của người dùng đang đăng nhập
+//        // Setup Event
 //        Event event = new Event();
-//        event.setStatus(EEventStatus.DRAFT);
+//        event.setEventId(1);
+//        event.setStatus(EEventStatus.SCHEDULED);
 //        Company company = new Company();
-//        company.setCompanyId(10);
+//        company.setCompanyId(100);
 //        event.setCompany(company);
 //
-//        Member member = new Member();
-//        member.setSubRole(ESubRole.EMPLOYEE); // không phải OWNER/ADMIN
+//        // Setup Contract
+//        Contract contract = new Contract();
+//        Account contractAccount = new Account();
+//        contractAccount.setAccountId(1);
+//        contract.setAccount(contractAccount);
 //
-//        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
-//        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
-//        when(memberRepository.findMemberByAccount_UserNameAndCompany_CompanyId("testUser", 10))
-//                .thenReturn(Optional.of(member));
-//
-//        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
-//        req.setEventId(1);
-//
-//        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req)));
-//    }
-//
-//    @Test
-//    void shouldThrowWhenNotManagerInScheduledEvent() {
-//        Account account = new Account();
-//        Role role = new Role();
-//        role.setRoleName(ERole.BUYER); // không phải MANAGER
-//        account.setRole(role);
-//
-//        Event event = new Event();
-//        event.setStatus(EEventStatus.SCHEDULED);
-//
-//        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
-//        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
-//
-//        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
-//        req.setEventId(1);
-//
-//        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req)));
-//    }
-//    @Test
-//    void shouldThrowWhenEventStatusIsInvalid() {
-//        Account account = new Account();
-//        Event event = new Event();
-//        event.setStatus(EEventStatus.APPROVED); // không phải DRAFT/SCHEDULED
-//
-//        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
-//        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
-//
-//        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
-//        req.setEventId(1);
-//
-//        assertThrows(AppException.class, () -> eventActivityService.createEventActivityAndTicket(List.of(req)));
-//    }
-//
-//    @Test
-//    void shouldCreateEventActivityAndTicketsSuccessfully() {
-//        // Setup account
-//        Account account = new Account();
-//        Role role = new Role();
-//        role.setRoleName(ERole.MANAGER);
-//        account.setRole(role);
-//
-//        // Setup event
-//        Event event = new Event();
-//        event.setEventId(1);
-//        event.setStatus(EEventStatus.SCHEDULED);
-//
-//        // TicketRequest
+//        // Request Ticket
 //        CreateEventActivityAndTicketRequest.TicketRequest ticketReq = new CreateEventActivityAndTicketRequest.TicketRequest();
-//        ticketReq.setTicketName("Vé A");
 //        ticketReq.setTicketCode("CODE123");
-//        ticketReq.setPrice(100000);
-//        ticketReq.setQuantity(10);
+//        ticketReq.setTicketName("Vé VIP");
+//        ticketReq.setPrice(200000);
 //        ticketReq.setMinQuantity(1);
 //        ticketReq.setMaxQuantity(5);
+//        ticketReq.setQuantity(10);
 //
-//        // Request
 //        CreateEventActivityAndTicketRequest req = new CreateEventActivityAndTicketRequest();
 //        req.setEventId(1);
-//        req.setActivityName("Activity 1");
+//        req.setActivityName("New Activity");
 //        req.setTickets(List.of(ticketReq));
 //
-//        // Stub repo
 //        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
 //        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
-//        when(eventActivityRepository.findEventActivitiesByEvent_EventId(1)).thenReturn(List.of());
+//        when(contractRepository.findByContractCode("CONTRACT1")).thenReturn(contract);
+//        when(eventActivityRepository.findEventActivitiesByEvent_EventId(1)).thenReturn(Collections.emptyList());
 //        when(ticketRepository.findTicketByTicketCode("CODE123")).thenReturn(Optional.empty());
-//        when(ticketRepository.save(any(Ticket.class))).thenAnswer(inv -> inv.getArgument(0));
-//        when(ticketMappingRepository.save(any(TicketMapping.class))).thenAnswer(inv -> inv.getArgument(0));
-//        when(eventActivityRepository.saveAndFlush(any(EventActivity.class)))
-//                .thenAnswer(inv -> {
-//                    EventActivity e = inv.getArgument(0);
-//                    e.setEventActivityId(99); // giả định ID
-//                    return e;
-//                });
-//
-//        var result = eventActivityService.createEventActivityAndTicket(List.of(req));
-//        assertEquals(1, result.size());
-//        assertEquals(99L, result.get(0).getEventActivityId());
-//    }
-//    @Test
-//    void shouldDeleteExistingEventActivitiesTicketsAndMappings() {
-//        // Setup
-//        Account account = new Account();
-//        Role role = new Role();
-//        role.setRoleName(ERole.MANAGER);
-//        account.setRole(role);
-//
-//        Event event = new Event();
-//        event.setEventId(1);
-//        event.setStatus(EEventStatus.SCHEDULED);
-//
-//        // EventActivity hiện tại
-//        EventActivity existingActivity = new EventActivity();
-//        existingActivity.setEventActivityId(100);
-//
-//        // TicketMapping của activity
-//        Ticket ticket = new Ticket();
-//        ticket.setTicketCode("TICKET123");
-//
-//        TicketMapping mapping = new TicketMapping();
-//        mapping.setTicket(ticket);
-//        mapping.setEventActivity(existingActivity);
-//
-//        // Request mới
-//        CreateEventActivityAndTicketRequest.TicketRequest ticketReq = new CreateEventActivityAndTicketRequest.TicketRequest();
-//        ticketReq.setTicketCode("NEW123");
-//        ticketReq.setTicketName("VIP");
-//        ticketReq.setPrice(500);
-//        ticketReq.setQuantity(10);
-//        ticketReq.setMinQuantity(1);
-//        ticketReq.setMaxQuantity(5);
-//
-//        CreateEventActivityAndTicketRequest request = new CreateEventActivityAndTicketRequest();
-//        request.setEventId(1);
-//        request.setActivityName("New Activity");
-//        request.setTickets(List.of(ticketReq));
-//
-//        // Stub dữ liệu
-//        when(accountRepository.findAccountByUserName("testUser")).thenReturn(Optional.of(account));
-//        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
-//        when(eventActivityRepository.findEventActivitiesByEvent_EventId(1)).thenReturn(List.of(existingActivity));
-//        when(ticketMappingRepository.findTicketMappingsByEventActivity(existingActivity)).thenReturn(List.of(mapping));
-//        when(ticketRepository.findTicketsByEvent_EventId(1)).thenReturn(List.of(ticket));
-//        when(ticketMappingRepository.findTicketMappingsByTicket(ticket)).thenReturn(Optional.empty());
-//
-//        // Lưu event activity mới
-//        when(eventActivityRepository.saveAndFlush(any(EventActivity.class))).thenAnswer(inv -> {
-//            EventActivity e = inv.getArgument(0);
-//            e.setEventActivityId(200);
-//            return e;
+//        when(ticketRepository.save(any(Ticket.class))).thenAnswer(invocation -> invocation.getArgument(0));
+//        when(ticketMappingRepository.save(any(TicketMapping.class))).thenAnswer(invocation -> invocation.getArgument(0));
+//        when(eventActivityRepository.saveAndFlush(any(EventActivity.class))).thenAnswer(invocation -> {
+//            EventActivity savedActivity = invocation.getArgument(0);
+//            savedActivity.setEventActivityId(100);
+//            return savedActivity;
 //        });
 //
-//        // Ticket mới
-//        when(ticketRepository.findTicketByTicketCode("NEW123")).thenReturn(Optional.empty());
-//        when(ticketRepository.save(any(Ticket.class))).thenAnswer(inv -> inv.getArgument(0));
-//        when(ticketMappingRepository.save(any(TicketMapping.class))).thenAnswer(inv -> inv.getArgument(0));
+//        List<CreateEventActivityAndTicketRequest> result = eventActivityService.createEventActivityAndTicket(List.of(req), "CONTRACT1");
+//
+//        assertEquals(1, result.size());
+//        assertEquals(100, result.get(0).getEventActivityId());
+//    }
+//
+//    @Test
+//    void testUpdateEventActivity_whenEventActivityIdExists_shouldUpdateSuccessfully() {
+//        // Arrange
+//        String contractCode = "CONTRACT_123";
+//        String username = "test_user";
+//
+//        var event = Event.builder()
+//                .eventId(1)
+//                .status(EEventStatus.SCHEDULED)
+//                .company(Company.builder()
+//                        .companyId(100)
+//                        .representativeId(Account.builder()
+//                                .accountId(1)
+//                                .role(Role.builder().roleName(ERole.MANAGER).build())
+//                                .build())
+//                        .build())
+//                .build();
+//
+//        var account = Account.builder()
+//                .accountId(1)
+//                .role(Role.builder().roleName(ERole.MANAGER).build())
+//                .build();
+//
+//        var request = CreateEventActivityAndTicketRequest.builder()
+//                .eventId(1)
+//                .eventActivityId(100) // có id => update
+//                .activityName("Updated Activity Name")
+//                .dateEvent(LocalDate.of(2025, 5, 1))
+//                .startTimeEvent(LocalTime.of(9, 0))
+//                .endTimeEvent(LocalTime.of(17, 0))
+//                .startTicketSale(LocalDateTime.of(2025, 4, 25, 9, 0))
+//                .endTicketSale(LocalDateTime.of(2025, 4, 30, 17, 0))
+//                .build();
+//
+//        var existingEventActivity = EventActivity.builder()
+//                .eventActivityId(100)
+//                .build();
+//
+//        // Mock SecurityContextHolder
+//        var authentication = mock(Authentication.class);
+//        when(authentication.getName()).thenReturn(username);
+//        var context = mock(SecurityContext.class);
+//        when(context.getAuthentication()).thenReturn(authentication);
+//        SecurityContextHolder.setContext(context);
+//
+//        when(accountRepository.findAccountByUserName(username)).thenReturn(Optional.of(account));
+//        when(eventRepository.findById(1)).thenReturn(Optional.of(event));
+//        when(contractRepository.findByContractCode(contractCode)).thenReturn(Contract.builder().account(account).build());
+//        when(eventActivityRepository.findById(100)).thenReturn(Optional.of(existingEventActivity));
+//        when(eventActivityRepository.saveAndFlush(any(EventActivity.class))).thenReturn(existingEventActivity);
 //
 //        // Act
-//        eventActivityService.createEventActivityAndTicket(List.of(request));
+//        List<CreateEventActivityAndTicketRequest> savedRequests = eventActivityService.createEventActivityAndTicket(
+//                List.of(request), contractCode);
 //
-//        // Assert: kiểm tra các phương thức xóa được gọi
-//        verify(ticketMappingRepository, times(1)).delete(mapping);
-//        verify(ticketRepository, times(1)).delete(ticket);
-//        verify(eventActivityRepository, times(1)).delete(existingActivity);
+//        // Assert
+//        assertEquals(1, savedRequests.size());
+//        assertEquals(100, savedRequests.get(0).getEventActivityId());
+//
+//        verify(eventActivityRepository).findById(100);
+//        verify(eventActivityRepository).saveAndFlush(existingEventActivity);
+//
+//        // Optional: kiểm tra fields đã được set đúng nếu cần
+//        assertEquals("Updated Activity Name", existingEventActivity.getActivityName());
+//        assertEquals(LocalDate.of(2025, 5, 1), existingEventActivity.getDateEvent());
 //    }
+//
 
 }
